# flare-im-server

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: lib.rs  topic.rs
common/src/config/: env.rs  mod.rs
common/src/utils/: mod.rs  msg_utils.rs
config/: development.yaml  message-router.yaml  production.yaml  testing.yaml
deploy/: docker-compose.yaml
deploy/config/clickhouse/: config.xml  users.xml
deploy/config/redis/: redis.conf
doc/: .$architecture.drawio.bkp  architecture.drawio  architecture.md  消息.drawio  消息流程图.drawio  请求数据.drawio
gateway/api-gateway/: Cargo.toml
gateway/message-gateway/: Cargo.toml
gateway/message-gateway/config/: development.yaml
gateway/message-gateway/src/: config.rs  handler.rs  lib.rs  main.rs  service.rs
proto-crate/: Cargo.toml  build.rs
proto-crate/proto/: friend.proto  group.proto  media.proto  message.proto  notification.proto  search.proto  session.proto  user.proto
proto-crate/proto/business/: friend.proto  group.proto  media.proto  search.proto  user.proto
proto-crate/proto/common/: enums.proto  error.proto  message.proto  server.proto
proto-crate/proto/gateway/: api_gateway.proto  message.proto
proto-crate/proto/service/: filter.proto  notification.proto  router.proto  session.proto  store.proto  sync.proto
proto-crate/src/: lib.rs
services/: README.md
services/business/media/: Cargo.toml
services/business/media/src/domain/entities/: media.rs
services/business/media/src/domain/services/: storage_service.rs
services/business/media/src/infrastructure/repositories/: postgres_repository.rs
services/business/media/src/infrastructure/services/: s3_storage_service.rs
services/business/media/src/interfaces/grpc/: media_service.rs
services/core/message_filter/: Cargo.toml
services/core/message_filter/config/: development.yaml  production.yaml  testing.yaml
services/core/message_filter/src/application/: filter_manager.rs
services/core/message_filter/src/domain/entities/: filter.rs
services/core/message_filter/src/domain/repositories/: filter_repository.rs
services/core/message_filter/src/domain/services/: filter_service.rs
services/core/message_filter/src/infrastructure/config/: config.rs
services/core/message_filter/src/infrastructure/repositories/: postgres_filter_repository.rs
services/core/message_filter/src/infrastructure/services/: filter_service_impl.rs
services/core/message_filter/src/interfaces/grpc/: filter_service.rs
services/core/message_router/: Cargo.toml
services/core/message_router/src/: lib.rs
services/core/message_router/src/application/: message_router.rs  mod.rs
services/core/message_router/src/domain/entities/: message.rs  message_check_code.rs  message_model.rs  message_status.rs  mod.rs
services/core/message_router/src/domain/repositories/: content_filter_repository.rs  friend_repository.rs  group_repository.rs  message_repository.rs  mod.rs  route_repository.rs
services/core/message_router/src/domain/services/: message_service.rs  mod.rs  routing_service.rs
services/core/message_router/src/infrastructure/: config.rs  mod.rs
services/core/message_router/src/infrastructure/repositories/: content_filter_repository.rs  friend_repository.rs  group_repository.rs  message_repository.rs  mod.rs  redis_message_repository.rs  route_repository.rs
services/core/message_router/src/interfaces/: mod.rs
services/core/message_router/src/interfaces/consumers/: message_distribution_consumer.rs  mod.rs
services/core/message_router/src/interfaces/grpc/: message_router_service.rs  mod.rs
services/core/message_store/: Cargo.toml
services/core/message_store/src/application/: message_manager.rs
services/core/message_sync/: Cargo.toml
services/core/message_sync/src/: lib.rs
services/core/message_sync/src/application/: mod.rs  sync_manager.rs
services/core/message_sync/src/domain/: mod.rs
services/core/message_sync/src/infrastructure/: mod.rs
services/core/message_sync/src/interfaces/: mod.rs
services/core/notification/: Cargo.toml
services/core/notification/src/domain/entities/: notification.rs
services/core/notification/src/domain/providers/: push_provider.rs
services/core/notification/src/domain/services/: notification_service.rs
services/core/notification/src/infrastructure/providers/: getui_provider.rs  huawei_provider.rs  jpush_provider.rs
services/core/notification/src/infrastructure/repositories/: postgres_repository.rs
services/core/notification/src/infrastructure/services/: notification_service_impl.rs
services/core/notification/src/interfaces/grpc/: notification_service.rs
services/core/session/: Cargo.toml
services/core/session/src/: lib.rs
services/core/session/src/application/: session_manager.rs
services/gateway/api-gateway/: Cargo.toml
services/gateway/message-gateway/: Cargo.toml
services/gateway/message-gateway/config/: development.yaml
services/gateway/message-gateway/src/: lib.rs
services/gateway/message-gateway/src/application/: auth.rs  message.rs  mod.rs  system.rs
services/gateway/message-gateway/src/domain/: auth.rs  message.rs  system.rs
services/gateway/message-gateway/src/infrastructure/: log.rs
services/gateway/message-gateway/src/interfaces/: mod.rs
services/gateway/message-gateway/src/interfaces/grpc/: mod.rs  server.rs  service.rs
services/gateway/message-gateway/src/interfaces/im/: auth.rs  message.rs  mod.rs  server.rs  system.rs
services/media/: Cargo.toml
services/media/src/: config.rs  lib.rs  main.rs  service.rs  storage.rs
services/message/: Cargo.toml
services/message-filter/: Cargo.toml
services/message-filter/src/: lib.rs
services/message-router/: Cargo.toml
services/message-router/src/: lib.rs
services/message-store/: Cargo.toml
services/message-store/src/: lib.rs
services/message-sync/: Cargo.toml
services/message-sync/src/: lib.rs
services/notification/: Cargo.toml
services/notification/src/: lib.rs
services/search/: Cargo.toml
services/search/src/: lib.rs
services/session/: Cargo.toml
services/session/src/: lib.rs
(+18 files in other folders)
