[workspace]
members = [
    "services/message-router",
    "services/message-store",
    "services/message-sync",
    "services/message-filter",
    "services/media",
    "services/notification",
    "services/search",
    "services/session",
    "proto-crate",
    "common"
]
resolver = "2"
[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Flare IM Team"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
envy = "0.4"


# grpc
prost = "0.13.5"
tonic= "0.12"
reqwest = "0.12.12"
async-broadcast = "0.7"
dashmap = "6.1"
etcd-client = "0.14"
rand = "0.9"
tonic-build = "0.12"
once_cell = "1.20"
tower = "0.5"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

#中间件
kafka = "0.10.0"
minio = "0.29.0"
redis = "0.29.0"

#媒体
aws-sdk-s3 = "1.12"
aws-config = "1.1"
aws-types = "1.1"
bytes = "1.5"

flare-core = "0.1.1"
flare-im-core= "0.1.0"
flare-rpc-core = "0.1.0"
