[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Common utilities and configurations for Flare IM Server"
license.workspace = true

[dependencies]
# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# 工具
tokio.workspace = true
chrono.workspace = true
once_cell.workspace = true

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }