[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
common = { path = "../../common" }

[dependencies.etcd-client]
workspace = true 