[package]
name = "message-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
flare-rpc-core = "0.1.0"
flare-im-core = "0.1.0"
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

proto = { path = "../../proto-crate" }
common = { path = "../../common" }

[dependencies.etcd-client]
workspace = true 