[package]
name = "media"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
aws-sdk-s3 = "1.12"
aws-config = "1.1"
aws-types = "1.1"
bytes = "1.5"
futures = "0.3"

proto-crate = { path = "../../proto-crate" }
common = { path = "../../common" } 