[package]
name = "message-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Message Store Service - Stores and retrieves messages"
license.workspace = true

[dependencies]
# 工作空间依赖
flare-rpc-core.workspace = true
flare-im-core.workspace = true
flare-core.workspace = true
proto-crate.workspace = true
common.workspace = true

# 异步运行时
tokio.workspace = true
tokio-stream.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# 序列化
serde.workspace = true
serde_json.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
tower.workspace = true

# 消息队列
rdkafka.workspace = true

# 数据库
sqlx.workspace = true
deadpool-postgres.workspace = true
tokio-postgres.workspace = true

# 工具
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures.workspace = true 