[package]
name = "message-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

proto-crate = { path = "../../proto-crate" }
common = { path = "../../common" } 