[package]
name = "message-service"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
kafka.workspace = true
timescaledb.workspace = true
common = { path = "../../common" } 