[package]
name = "media"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
aws-sdk-s3 = "1.3"
chrono = { version = "0.4", features = ["serde"] }
flare-core = { path = "../../../crates/flare-core" }
flare-rpc-core = { path = "../../../crates/flare-rpc-core" }
log = "0.4"
mockall = "0.12"
proto-crate = { path = "../../../crates/proto-crate" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dev-dependencies]
tokio-test = "0.4" 