[package]
name = "message-router"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Message router service"
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono = { workspace = true, features = ["serde"] }
common.workspace = true
flare-core = { path = "../../../../flare/flare-core" }
flare-rpc-core = { path = "../../../../flare/flare-rpc-core" }
proto-crate = { path = "../../../proto-crate" }
futures.workspace = true
log.workspace = true
mockall.workspace = true
once_cell.workspace = true

redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
rdkafka = { version = "0.37", features = ["cmake-build", "ssl", "sasl"] }
prost.workspace = true
tracing = { version = "0.1", features = ["attributes"] }
opentelemetry = { version = "0.18", features = ["rt-tokio"] }

[dev-dependencies]
tokio-test.workspace = true
redis-test.workspace = true 