[package]
name = "message-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Message Gateway Service - Handles client connections and message routing"
license.workspace = true

[dependencies]
# 工作空间依赖
flare-rpc-core.workspace = true
flare-im-core.workspace = true
flare-core.workspace = true
proto-crate= { path = "../../../proto-crate" }
common= { path = "../../../common" }

# 异步运行时
tokio.workspace = true
tokio-stream.workspace = true

# 错误处理
anyhow.workspace = true
thiserror.workspace = true

# 日志
log.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# 序列化
prost.workspace = true

# gRPC
tonic.workspace = true

# 工具
uuid.workspace = true
async-trait.workspace = true
env_logger.workspace = true
once_cell.workspace = true
dashmap = "7.0.0-rc1"
chrono.workspace = true
